feat: add slf4j logs to services and refine exception handling